--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
     --soft-gray: #A0A0A0;
     --light-gray: #E3E3E3;
     --extra-light-gray: #F5F5F5;
-    --white: #FFFFFF;
+    --white: #ffffff;
 
     --shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     --card-radius: 20px;
